--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Halo Portal UX Demo – Admin Console</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="../assets/css/base.css" />
 </head>
 <body class="admin-layout">
@@ -25,64 +26,88 @@
 
   <div class="admin-main">
     <header class="admin-main__header">
-      <h1>Self Service Portal – Admin Console (UX Demo)</h1>
+      <div class="stack" style="gap: 0.25rem;">
+        <span class="badge">Admin</span>
+        <h1>Self Service Portal – Admin Console</h1>
+        <p class="muted" style="margin: 0;">Configure navigation, pages, widgets, and roles for the portal experience.</p>
+      </div>
       <div class="admin-main__actions">
-        <button id="admin-theme-toggle" class="btn btn-ghost">Toggle theme</button>
+        <button id="admin-theme-toggle" class="btn btn-secondary">Toggle theme</button>
       </div>
     </header>
 
-    <section id="admin-section-general" class="admin-section admin-section--active">
-      <h2>General Settings</h2>
-      <p>
-        This section will eventually allow configuration of basic portal settings
-        such as title, URL, welcome message and login requirements.
-      </p>
+    <section id="admin-section-general" class="admin-section admin-section--active stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Welcome</h2>
+        <p class="muted">
+          This console will eventually let you tailor the customer portal. Phase 1 provides a static shell for future controls.
+        </p>
+      </div>
+      <div class="admin-panels">
+        <div class="card">
+          <h3>Portal basics</h3>
+          <p class="muted">Set portal title, support email, and landing page preferences.</p>
+          <p class="helper-text">Coming in later phases.</p>
+        </div>
+        <div class="card">
+          <h3>Announcements</h3>
+          <p class="muted">Surface important notices to end users on login.</p>
+          <p class="helper-text">Placeholder content.</p>
+        </div>
+        <div class="card">
+          <h3>Localization</h3>
+          <p class="muted">Language packs and date/time formats.</p>
+          <p class="helper-text">Planned for a future phase.</p>
+        </div>
+      </div>
     </section>
 
-    <section id="admin-section-branding" class="admin-section">
-      <h2>Branding & Themes</h2>
-      <p>
-        This section will host the theme editor (colors, logos, light/dark mode).
-      </p>
+    <section id="admin-section-branding" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Branding & Themes</h2>
+        <p class="muted">Light/dark themes, brand colors, and logos will be configurable here.</p>
+        <p class="helper-text">Theme editor arrives in Phase 2.</p>
+      </div>
     </section>
 
-    <section id="admin-section-navigation" class="admin-section">
-      <h2>Navigation Manager</h2>
-      <p>
-        This section will manage which pages appear in the portal navigation,
-        their order and role‑based visibility.
-      </p>
+    <section id="admin-section-navigation" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Navigation</h2>
+        <p class="muted">Control portal menus, order, and role visibility.</p>
+        <p class="helper-text">Navigation manager will be built in Phase 4.</p>
+      </div>
     </section>
 
-    <section id="admin-section-pages" class="admin-section">
-      <h2>Pages & Layouts</h2>
-      <p>
-        This section will contain the page builder UI, where admins can assemble
-        pages from widgets.
-      </p>
+    <section id="admin-section-pages" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Pages & Layouts</h2>
+        <p class="muted">A drag-and-drop page builder will live here.</p>
+        <p class="helper-text">Layouts will be editable in Phase 4.</p>
+      </div>
     </section>
 
-    <section id="admin-section-widgets" class="admin-section">
-      <h2>Widget Library</h2>
-      <p>
-        This section will list core and custom widgets and their configuration.
-      </p>
+    <section id="admin-section-widgets" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Widgets</h2>
+        <p class="muted">Browse the widget library and configure options.</p>
+        <p class="helper-text">Widget registry and rendering arrive in Phase 3.</p>
+      </div>
     </section>
 
-    <section id="admin-section-roles" class="admin-section">
-      <h2>Roles & Visibility</h2>
-      <p>
-        This section will control which pages and widgets are visible for
-        which roles (end user, manager, local IT, etc.).
-      </p>
+    <section id="admin-section-roles" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Roles & Visibility</h2>
+        <p class="muted">Manage which pages and widgets each audience can see.</p>
+        <p class="helper-text">Role-aware controls will be wired in Phase 5.</p>
+      </div>
     </section>
 
-    <section id="admin-section-devtools" class="admin-section">
-      <h2>Developer Tools</h2>
-      <p>
-        This section will describe and eventually configure custom CSS/JS,
-        integrations and widget SDK options.
-      </p>
+    <section id="admin-section-devtools" class="admin-section stack">
+      <div class="card">
+        <h2 style="margin-top: 0;">Developer Tools</h2>
+        <p class="muted">Custom CSS/JS and SDK hooks for advanced teams.</p>
+        <p class="helper-text">Details will be fleshed out in later phases.</p>
+      </div>
     </section>
   </div>
 
