Add theme system with light and dark modes

--- a/admin/index.html
+++ b/admin/index.html
@@ -32,7 +32,7 @@
         <p class="muted" style="margin: 0;">Configure navigation, pages, widgets, and roles for the portal experience.</p>
       </div>
       <div class="admin-main__actions">
-        <button id="admin-theme-toggle" class="btn btn-secondary">Toggle theme</button>
+        <button id="admin-theme-toggle" data-role="theme-toggle" class="btn btn-secondary">Dark mode</button>
       </div>
     </header>
 
