--- a/portal/index.html
+++ b/portal/index.html
@@ -20,7 +20,7 @@
       <a href="#" class="nav-link">Dashboards</a>
     </nav>
     <div class="app-header__actions">
-      <button id="theme-toggle" class="btn btn-ghost">Toggle theme</button>
+      <button id="theme-toggle" data-role="theme-toggle" class="btn btn-ghost">Dark mode</button>
       <div class="avatar-pill">
         <span class="avatar-pill__initials">JD</span>
       </div>
