Add custom widget loader and DNS manager example

--- a/admin/index.html
+++ b/admin/index.html
@@ -136,6 +136,17 @@
       <div class="card stack">
         <div class="section-header">
           <div class="stack" style="gap: 4px;">
+            <h3 style="margin: 0;">DNS Manager</h3>
+            <p class="muted" style="margin: 0;">Configure provider details and who can access DNS management.</p>
+          </div>
+          <span class="pill">Custom widget</span>
+        </div>
+        <div id="dns-config" class="stack" style="gap: 0.75rem;"></div>
+      </div>
+
+      <div class="card stack">
+        <div class="section-header">
+          <div class="stack" style="gap: 4px;">
             <h3 style="margin: 0;">My Tickets overrides</h3>
             <p class="muted" style="margin: 0;">Choose which columns each role sees in the My Tickets widget.</p>
           </div>
@@ -169,6 +180,7 @@
   </div>
 
   <script src="../assets/js/layouts.js"></script>
+  <script src="../assets/js/widgets.js"></script>
   <script src="../assets/js/admin-console.js"></script>
   <script src="../assets/js/app.js"></script>
   <script>
