Add advanced block editor controls

--- a/admin/index.html
+++ b/admin/index.html
@@ -218,7 +218,11 @@
           <select id="layout-page-select" aria-label="Choose page to edit"></select>
         </div>
         <div id="layout-summary" class="stack" style="gap: 0.5rem;"></div>
-        <div id="layout-canvas" class="stack" style="gap: var(--space-8);"></div>
+        <div id="layout-toolbar" class="stack"></div>
+        <div class="layout-editor-grid">
+          <div id="layout-canvas" class="stack" style="gap: var(--space-8);"></div>
+          <aside id="layout-inspector" class="card stack" style="gap: 0.75rem;"></aside>
+        </div>
       </div>
     </section>
 
